0.9.0.dev0/_sources/gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/plot_spectrochempy_nmr__core__c_importer__plot_read_nmr_from_bruker.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/plot_spectrochempy_nmr__core__c_importer__plot_read_nmr_from_bruker.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-nmr_plot_spectrochempy_nmr__core__c_importer__plot_read_nmr_from_bruker.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-nmr_plot_spectrochempy_nmr__core__c_importer__plot_read_nmr_from_bruker.py:


Loading of experimental 1D NMR data
===================================

In this example, we load a NMR dataset (in the Bruker format) and plot it.

Requires the official ``spectrochempy-nmr`` plugin.
Install with: ``pip install spectrochempy[nmr]``.

.. GENERATED FROM PYTHON SOURCE LINES 17-18

.. code-block:: Python
   :dedent: 1









.. GENERATED FROM PYTHON SOURCE LINES 20-22

.. code-block:: Python

    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 23-24

`datadir.path` contains the path to a default data directory.

.. GENERATED FROM PYTHON SOURCE LINES 24-29

.. code-block:: Python


    datadir = scp.preferences.datadir

    path = datadir / "nmrdata" / "bruker" / "tests" / "nmr" / "topspin_1d"








.. GENERATED FROM PYTHON SOURCE LINES 30-31

load the data in a new dataset

.. GENERATED FROM PYTHON SOURCE LINES 31-34

.. code-block:: Python


    ndd = scp.nmr.read_topspin(path, expno=1, remove_digital_filter=True)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/spectrochempy/spectrochempy/.venv/lib/python3.13/site-packages/spectrochempy/core/readers/importer.py:226: UserWarning: No module named 'spectrochempy_hypercomplex'
      warning_(str(e))




.. GENERATED FROM PYTHON SOURCE LINES 35-36

view it...

.. GENERATED FROM PYTHON SOURCE LINES 36-38

.. code-block:: Python


    _ = ndd.plot()


.. rst-class:: sphx-glr-script-out

.. code-block:: pytb

    Traceback (most recent call last):
      File "/home/runner/work/spectrochempy/spectrochempy/build/~gallery_examples/plugins/spectrochempy-nmr/plot_spectrochempy_nmr__core__c_importer__plot_read_nmr_from_bruker.py", line 37, in <module>
        _ = ndd.plot()
            ^^^^^^^^
    AttributeError: 'NoneType' object has no attribute 'plot'




.. GENERATED FROM PYTHON SOURCE LINES 39-40

Now load a 2D  dataset

.. GENERATED FROM PYTHON SOURCE LINES 40-45

.. code-block:: Python


    path = datadir / "nmrdata" / "bruker" / "tests" / "nmr" / "topspin_2d"
    ndd = scp.nmr.read_topspin(path, expno=1, remove_digital_filter=True)
    _ = ndd.plot()


.. GENERATED FROM PYTHON SOURCE LINES 46-48

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 48-51

.. code-block:: Python


    # scp.show()



.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.012 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-nmr_plot_spectrochempy_nmr__core__c_importer__plot_read_nmr_from_bruker.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_spectrochempy_nmr__core__c_importer__plot_read_nmr_from_bruker.ipynb <plot_spectrochempy_nmr__core__c_importer__plot_read_nmr_from_bruker.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_spectrochempy_nmr__core__c_importer__plot_read_nmr_from_bruker.py <plot_spectrochempy_nmr__core__c_importer__plot_read_nmr_from_bruker.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_spectrochempy_nmr__core__c_importer__plot_read_nmr_from_bruker.zip <plot_spectrochempy_nmr__core__c_importer__plot_read_nmr_from_bruker.zip>`
